gitops/projects/user/overlays/prod/ingress.server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-account
spec:
  hosts:
  - "user.prod.example.com"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: user-server.user-server.svc.cluster.local
        port:
          number: 80
